[project]
name = "support-flow-crm"
version = "0.1.0"
description = "Enterprise CRM triage environment for logistics resolution."
authors = [
    {name = "Ritika Iyer"}
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "httpx",
    "openai",
    "openenv-core"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.openenv]
mode = "simulation"
entry_point = "app:app"